Stay Page Initiated, simple layouts have been implemented for it.
custom cards have also been implemented, layout could possibly change.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">DevRight-StillbaaiTourism</string>
+
+
+    <!--Stay-->
+    <string name="StayHeading">Stay</string>
+    <string name="searchBar">Start Searching...</string>
 </resources>
