Added the navigation on Stay. Enabled view.Binding. Added more Strings. Added a menu with 3 items. Added the header for the menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,10 @@
     <!--Stay Menu-->
     <string name="home">Home</string>
     <string name="stay">Stay</string>
-    <string name="eat">Stay</string>
+    <string name="eat">Eat</string>
+
+    <!--Menu open and close-->
+    <string name="navigation_drawer_open">Open Navigation</string>
+    <string name="navigation_drawer_close">Close Navigation</string>
+
 </resources>
