--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,15 @@
     <string name="app_name">DevRight-StillbaaiTourism</string>
 
 
+    <!--Home-->
+    <string name="HomeHeading">Home</string>
+    <string name="About">About</string>
+    <string name="Stilbaai">Stilbaai</string>
+    <string name="Jongensfontein">Jongensfontein</string>
+    <string name="Melkhoutfontein">Melkhoutfontein</string>
+    <string name="TodayEvents">Today\'s Events</string>
+    <string name="EelAdvert">Come see the Eels!</string>
+    <string name="StoreAdvert">Visit our Local Store!</string>
     <!--Stay-->
     <string name="StayHeading">Stay</string>
     <string name="searchBar">Start Searching…</string>
