--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,10 @@
     <string name="Experience">Experience</string>
     <!--Eat-->
     <string name="eatHeading">Eat</string>
+    <!--Contact Us-->
+    <string name="contactUsHeading">Contact Us</string>
+    <!--Eel-->
+    <string name="eelsHeading">Eels</string>
     <!--Activities-->
     <string name="activitiesHeading">Activities</string>
     <!--Events-->
