Eats Details, now accepts multiple images in the detail view. Dashboard UI has been updated - Adverts are now please in a carousel type view, and events are now place in a vertical scrollview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
 
     <!--Home-->
-    <string name="HomeHeading">Home</string>
+    <string name="HomeHeading">Welcome to Stilbaai</string>
+    <string name="HomeHeadingSubHeading">A TASTE OF EDEN IN THE GARDEN ROUTE</string>
+
     <string name="About">About</string>
     <string name="Stilbaai">Stilbaai</string>
     <string name="Jongensfontein">Jongensfontein</string>
