--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,16 @@
     <string name="stay">Stay</string>
     <string name="eat">Eat</string>
     <string name="Experience">Experience</string>
+
     <!--Eat-->
     <string name="eatHeading">Eat</string>
+
     <!--Contact Us-->
     <string name="contactUsHeading">Contact Us</string>
+
+    <!--Eel feeding-->
+    <string name="eelFeeding">Eel Feeding</string>
+
     <!--Eel-->
     <string name="eelsHeading">Eels</string>
     <!--Activities-->
