Removed unnecessary and un-used files/folders. Fixed incorrect icon in business detail.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DevRight-StillbaaiTourism</string>
+    <string name="app_name">Stilbaai Tourisme Official App</string>
 
 
     <!--Home-->
