Home events now displays 'Upcoming Events'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="Stilbaai">Stilbaai</string>
     <string name="Jongensfontein">Jongensfontein</string>
     <string name="Melkhoutfontein">Melkhoutfontein</string>
-    <string name="TodayEvents">Today\'s Events</string>
+    <string name="TodayEvents">Upcoming Events</string>
     <string name="EelAdvert">Come see the Eels!</string>
     <string name="StoreAdvert">Visit our Local Store!</string>
     <!--Stay-->
